RESOLVED FIXED160191
JS Built-ins should throw this-error messages consistently with binding generated code
https://bugs.webkit.org/show_bug.cgi?id=160191
Summary JS Built-ins should throw this-error messages consistently with binding gener...
youenn fablet
Reported 2016-07-26 03:19:46 PDT
When checking "this", the same error message should be used for JS built-ins and binding generated code.
Attachments
Patch (23.42 KB, patch)
2016-07-26 03:32 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2016-07-26 03:32:48 PDT
WebKit Commit Bot
Comment 2 2016-07-26 03:34:46 PDT
Attachment 284571 [details] did not pass style-queue: ERROR: Source/WebCore/bindings/js/JSDOMGlobalObject.cpp:109: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/WebCore/bindings/js/JSDOMGlobalObject.cpp:111: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 2 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3 2016-07-26 23:39:02 PDT
Comment on attachment 284571 [details] Patch Clearing flags on attachment: 284571 Committed r203766: <http://trac.webkit.org/changeset/203766>
WebKit Commit Bot
Comment 4 2016-07-26 23:39:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.